--- a/.github/workflows/nightly-build.yml
+++ b/.github/workflows/nightly-build.yml
@@ -624,232 +624,9 @@ jobs:
           EOF
           chmod +x scripts/update_route53.sh
 
-          # Create deployment script with SSL
-          cat > scripts/deploy.sh << 'EOF'
-          #!/bin/bash
-          set -e
-
-          # Get variables from environment
-          DOMAIN_NAME="$1"
-          if [ -z "$DOMAIN_NAME" ]; then
-            echo "Error: Domain name not provided"
-            exit 1
-          fi
-
-          # Get EC2 public IP if not provided
-          EC2_IP=$(curl -s http://169.254.169.254/latest/meta-data/public-ipv4 || echo "")
-          if [ -z "$EC2_IP" ]; then
-            EC2_IP="$EC2_PUBLIC_IP"
-          fi
-
-          # Set QA subdomain as the main domain for this deployment
-          QA_DOMAIN="qa.$DOMAIN_NAME"
-
-          echo "Domain: $DOMAIN_NAME"
-          echo "QA Domain: $QA_DOMAIN"
-          echo "EC2 IP: $EC2_IP"
-
-          # Verify RDS connectivity
-          echo "Verifying RDS connectivity..."
-          echo "RDS Endpoint: $RDS_ENDPOINT"
-          if mysql -h $RDS_ENDPOINT -u $RDS_USERNAME -p$RDS_PASSWORD -e "SELECT 1" > /dev/null 2>&1; then
-            echo "✅ Database connection successful"
-          else
-            echo "⚠️ Warning: Cannot connect to RDS directly from EC2. Check security groups."
-            echo "Attempting database connection test via telnet..."
-            RDS_HOST=$(echo $RDS_ENDPOINT | cut -d':' -f1)
-            RDS_PORT=3306
-            timeout 5 bash -c "</dev/tcp/$RDS_HOST/$RDS_PORT" && echo "Port connectivity OK" || echo "Cannot connect to database port"
-          fi
-
-          # Pull the latest images
-          echo "Pulling latest images from ECR..."
-          sudo docker pull $ECR_URI/frontend:latest
-          sudo docker pull $ECR_URI/backend:latest
-
-          # Stop any running containers
-          echo "Stopping existing containers..."
-          sudo docker-compose down || true
-
-          # Create directories for Let's Encrypt
-          echo "Setting up Let's Encrypt directories..."
-          sudo mkdir -p /var/www/certbot
-          sudo mkdir -p /etc/letsencrypt
-
-          # Create nginx config for SSL
-          echo "Creating nginx configuration with SSL support..."
-          cat > nginx.conf << EOFNGINX
-          events {}
-
-          http {
-              include /etc/nginx/mime.types;
-              default_type application/octet-stream;
-              server_tokens off;
-
-              # Redirect HTTP to HTTPS
-              server {
-                  listen 80;
-                  server_name $QA_DOMAIN www.$QA_DOMAIN;
-                  
-                  # For Let's Encrypt
-                  location /.well-known/acme-challenge/ {
-                      root /var/www/certbot;
-                  }
-                  
-                  location / {
-                      return 301 https://\$host\$request_uri;
-                  }
-              }
-
-              # HTTPS server
-              server {
-                  listen 443 ssl;
-                  server_name $QA_DOMAIN www.$QA_DOMAIN;
-                  
-                  # SSL certificates
-                  ssl_certificate /etc/letsencrypt/live/$QA_DOMAIN/fullchain.pem;
-                  ssl_certificate_key /etc/letsencrypt/live/$QA_DOMAIN/privkey.pem;
-                  ssl_protocols TLSv1.2 TLSv1.3;
-                  
-                  # Frontend
-                  location / {
-                      root /usr/share/nginx/html;
-                      try_files \$uri /index.html;
-                  }
-
-                  # Backend APIs
-                  location ~ ^/(login|register|logout|game|search|favorite|recommendation) {
-                      proxy_pass http://backend:8080;
-                      proxy_set_header Host \$host;
-                      proxy_set_header X-Real-IP \$remote_addr;
-                      proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
-                      proxy_set_header X-Forwarded-Proto \$scheme;
-                  }
-
-                  # Static assets
-                  location /static/ {
-                      root /usr/share/nginx/html;
-                  }
-              }
-          }
-          EOFNGINX
-
-          # Create Dockerfile for frontend with SSL
-          echo "Creating Dockerfile for frontend with SSL..."
-          cat > Dockerfile.frontend.ssl << EOFDOCKER
-          FROM $ECR_URI/frontend:latest
-          COPY nginx.conf /etc/nginx/nginx.conf
-          EXPOSE 80 443
-          CMD ["nginx", "-g", "daemon off;"]
-          EOFDOCKER
-
-          # Build frontend with SSL
-          echo "Building frontend image with SSL support..."
-          sudo docker build -t frontend-ssl:latest -f Dockerfile.frontend.ssl .
-
-          # Create docker-compose file with certbot
-          echo "Creating docker-compose.yml with certbot..."
-          cat > docker-compose.yml << EOFCOMPOSE
-          version: "3.8"
-          services:
-            backend:
-              image: $ECR_URI/backend:latest
-              environment:
-                SPRING_DATASOURCE_URL: jdbc:mysql://$RDS_ENDPOINT/twitch?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
-                SPRING_DATASOURCE_USERNAME: $RDS_USERNAME
-                SPRING_DATASOURCE_PASSWORD: $RDS_PASSWORD
-                SPRING_PROFILES_ACTIVE: prod
-                # Debug options
-                LOGGING_LEVEL_ROOT: INFO
-                LOGGING_LEVEL_COM_LAIOFFER: DEBUG
-              ports:
-                - "8080:8080"
-              restart: always
-              networks:
-                - app-network
-              healthcheck:
-                test: ["CMD", "curl", "-f", "http://localhost:8080/actuator/health"]
-                interval: 30s
-                timeout: 10s
-                retries: 3
-                start_period: 40s
-            
-            frontend:
-              image: frontend-ssl:latest
-              volumes:
-                - /etc/letsencrypt:/etc/letsencrypt:ro
-                - /var/www/certbot:/var/www/certbot:ro
-              ports:
-                - "80:80"
-                - "443:443"
-              depends_on:
-                backend:
-                  condition: service_healthy
-              restart: always
-              networks:
-                - app-network
-            
-            certbot:
-              image: certbot/certbot
-              volumes:
-                - /etc/letsencrypt:/etc/letsencrypt
-                - /var/www/certbot:/var/www/certbot
-              entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait \$\${!}; done;'"
-
-          networks:
-            app-network:
-              driver: bridge
-          EOFCOMPOSE
-
-          # Verify docker-compose file syntax
-          echo "Verifying docker-compose.yml syntax..."
-          sudo docker-compose config
-
-          # Start services for ACME challenge
-          echo "Starting services for Let's Encrypt validation..."
-          sudo docker-compose up -d
-
-          # Wait for services to start
-          echo "Waiting for services to start..."
-          sleep 20
-
-          # Get certificate
-          echo "Obtaining SSL certificate for $QA_DOMAIN..."
-          sudo docker run --rm -v /etc/letsencrypt:/etc/letsencrypt -v /var/www/certbot:/var/www/certbot \
-            certbot/certbot certonly --webroot -w /var/www/certbot \
-            --email admin@$DOMAIN_NAME --agree-tos --no-eff-email \
-            -d $QA_DOMAIN -d www.$QA_DOMAIN --force-renewal
-
-          # Restart services
-          echo "Restarting services with SSL enabled..."
-          sudo docker-compose down
-          sudo docker-compose up -d
-
-          # Setup auto-renewal
-          echo "Setting up certificate auto-renewal..."
-          sudo bash -c 'echo "0 0,12 * * * root docker run --rm -v /etc/letsencrypt:/etc/letsencrypt -v /var/www/certbot:/var/www/certbot certbot/certbot renew --quiet" > /etc/cron.d/certbot-renew'
-
-          # Wait for services to start
-          echo "Waiting for services to come up fully..."
-          sleep 30
-
-          # Check container status
-          echo "Checking container status..."
-          sudo docker-compose ps
-
-          # Test backend health
-          echo "Testing backend health endpoint..."
-          curl -sk https://$QA_DOMAIN/actuator/health || echo "Backend health check failed"
-
-          echo "Deployment complete!"
-          echo "Your application is available at:"
-          echo "- HTTPS: https://$QA_DOMAIN"
-          echo "- HTTP: http://$QA_DOMAIN (redirects to HTTPS)"
-
-          echo "For troubleshooting:"
-          echo "- Check backend logs: sudo docker-compose logs backend"
-          echo "- Check frontend logs: sudo docker-compose logs frontend"
-          echo "- Check SSL certificate: sudo ls -l /etc/letsencrypt/live/$QA_DOMAIN/"
+          # Create deployment script with fixed database configuration
+          cat > scripts/deploy.sh << EOF
+          $(cat artifacts/fixed-db-deploy.txt)
           EOF
           chmod +x scripts/deploy.sh
 
@@ -901,6 +678,39 @@ jobs:
           echo "Deploying application with SSL..."
           ssh -i labsuser.pem -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ec2-user@$EC2_IP "ECR_URI=${{ env.AWS_ECR_URI }} RDS_ENDPOINT=${{ secrets.RDS_ENDPOINT }} RDS_USERNAME=${{ secrets.RDS_USERNAME }} RDS_PASSWORD=${{ secrets.RDS_PASSWORD }} EC2_PUBLIC_IP=$EC2_IP ./deploy.sh mytwitch.software"
 
+      - name: Check security group settings
+        if: ${{ env.SSH_CONNECTION_SUCCESS == 'true' }}
+        run: |
+          EC2_IP="${{ secrets.EC2_QA_PUBLIC_IP }}"
+
+          echo "Checking EC2 security group for RDS access..."
+          # Get instance ID from IP
+          EC2_INSTANCE_ID=$(aws ec2 describe-instances --filters "Name=public-ip-address,Values=$EC2_IP" --query "Reservations[0].Instances[0].InstanceId" --output text)
+          echo "EC2 Instance ID: $EC2_INSTANCE_ID"
+
+          # Get security groups
+          SG_IDS=$(aws ec2 describe-instances --instance-ids $EC2_INSTANCE_ID --query "Reservations[0].Instances[0].SecurityGroups[*].GroupId" --output text)
+          echo "Security Groups: $SG_IDS"
+
+          for SG_ID in $SG_IDS; do
+            echo "Checking outbound rules for Security Group: $SG_ID"
+            aws ec2 describe-security-groups --group-ids $SG_ID --query "SecurityGroups[0].IpPermissionsEgress" --output table
+          done
+
+          # Check RDS security group
+          echo "Checking RDS security group settings..."
+          RDS_ENDPOINT="${{ secrets.RDS_ENDPOINT }}"
+          RDS_IDENTIFIER=$(echo $RDS_ENDPOINT | cut -d'.' -f1)
+          echo "RDS Identifier: $RDS_IDENTIFIER"
+
+          RDS_SG_IDS=$(aws rds describe-db-instances --db-instance-identifier $RDS_IDENTIFIER --query "DBInstances[0].VpcSecurityGroups[*].VpcSecurityGroupId" --output text 2>/dev/null || echo "Unable to determine RDS security groups")
+          echo "RDS Security Groups: $RDS_SG_IDS"
+
+          for SG_ID in $RDS_SG_IDS; do
+            echo "Checking inbound rules for RDS Security Group: $SG_ID"
+            aws ec2 describe-security-groups --group-ids $SG_ID --query "SecurityGroups[0].IpPermissions" --output table
+          done
+
       - name: Verify deployment
         if: ${{ env.SSH_CONNECTION_SUCCESS == 'true' }}
         run: |
@@ -910,13 +720,17 @@ jobs:
           ssh -i labsuser.pem -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ec2-user@$EC2_IP "sudo docker ps -a"
 
           echo "Checking logs..."
-          ssh -i labsuser.pem -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ec2-user@$EC2_IP "sudo docker-compose logs --tail=30"
+          ssh -i labsuser.pem -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ec2-user@$EC2_IP "sudo docker-compose -f docker-compose.http.yml logs --tail=30 || sudo docker-compose -f docker-compose.ssl.yml logs --tail=30 || echo 'No docker-compose logs available'"
 
           echo "Application should be available at:"
-          echo "- HTTPS: https://qa.mytwitch.software"
-          echo "- HTTP: http://qa.mytwitch.software (redirects to HTTPS)"
+          echo "- HTTP: http://qa.mytwitch.software"
+          echo "- HTTPS: https://qa.mytwitch.software (if SSL setup succeeded)"
 
-          echo "Note: DNS changes may take 5-10 minutes to propagate. If you cannot access the site immediately, please wait and try again."
+          echo "Note 1: DNS changes may take 5-10 minutes to propagate. If you cannot access the site immediately, please wait and try again."
+          echo "Note 2: If you're still having database connectivity issues, you'll need to check these security settings:"
+          echo "  1. Your EC2 instance security group must allow outbound traffic to port 3306"
+          echo "  2. Your RDS security group must allow inbound traffic from your EC2 instance's security group or IP address"
+          echo "  3. If your RDS is in a private subnet, ensure network routing allows access from the EC2 instance"
 
       - name: Deployment failed due to connection issues
         if: ${{ env.SSH_CONNECTION_SUCCESS == 'false' }}
