--- a/.github/workflows/nightly-build.yml
+++ b/.github/workflows/nightly-build.yml
@@ -483,229 +483,70 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Create deployment scripts
+      - name: Create deployment script
         run: |
-          mkdir -p scripts
-
-          # Create EC2 setup script
-          cat > scripts/setup_ec2.sh << 'EOF'
-          #!/bin/bash
-          set -e
-
-          # Install Docker if not already installed
-          if ! command -v docker &> /dev/null; then
-            echo "Installing Docker..."
-            sudo dnf update -y
-            sudo dnf install docker -y
-            sudo systemctl start docker
-            sudo systemctl enable docker
-            sudo usermod -a -G docker ec2-user
-          else
-            echo "Docker already installed"
-          fi
-
-          # Install Docker Compose if not already installed
-          if ! command -v docker-compose &> /dev/null; then
-            echo "Installing Docker Compose..."
-            sudo curl -L "https://github.com/docker/compose/releases/download/v2.20.3/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-            sudo chmod +x /usr/local/bin/docker-compose
-            sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
-          else
-            echo "Docker Compose already installed"
-          fi
-
-          # Install tools for troubleshooting
-          if ! command -v jq &> /dev/null; then
-            echo "Installing jq and other tools..."
-            sudo dnf install -y jq bind-utils mysql
-          fi
-
-          # Setup AWS CLI
-          echo "Setting up AWS CLI configuration..."
-          mkdir -p ~/.aws
-
-          echo "[default]" > ~/.aws/config
-          echo "region=$AWS_REGION" >> ~/.aws/config
-
-          echo "[default]" > ~/.aws/credentials
-          echo "aws_access_key_id=$AWS_ACCESS_KEY_ID" >> ~/.aws/credentials
-          echo "aws_secret_access_key=$AWS_SECRET_ACCESS_KEY" >> ~/.aws/credentials
-          echo "aws_session_token=$AWS_SESSION_TOKEN" >> ~/.aws/credentials
-
-          chmod 600 ~/.aws/credentials
-
-          # Login to ECR
-          echo "Logging in to ECR..."
-          aws ecr get-login-password --region $AWS_REGION | sudo docker login --username AWS --password-stdin $ECR_URI
-
-          echo "EC2 setup complete!"
+          # Create a simple deployment script
+          cat > deploy.sh << EOF
+          $(cat artifacts/simple-ec2-deploy.txt)
           EOF
-          chmod +x scripts/setup_ec2.sh
-
-          # Create Route53 update script
-          cat > scripts/update_route53.sh << 'EOF'
-          #!/bin/bash
-          set -e
-
-          DOMAIN_NAME="$1"
-          EC2_IP="$2"
-
-          if [ -z "$DOMAIN_NAME" ] || [ -z "$EC2_IP" ]; then
-            echo "Usage: $0 <domain_name> <ec2_ip>"
-            exit 1
-          fi
-
-          echo "Updating Route53 DNS records for $DOMAIN_NAME to point to $EC2_IP"
-
-          # Get the hosted zone ID for the domain
-          HOSTED_ZONE_ID=$(aws route53 list-hosted-zones-by-name --dns-name "$DOMAIN_NAME" --query "HostedZones[?Name=='$DOMAIN_NAME.'].Id" --output text | sed 's/\/hostedzone\///')
-
-          if [ -z "$HOSTED_ZONE_ID" ]; then
-            echo "Error: Could not find Route53 hosted zone for $DOMAIN_NAME"
-            exit 1
-          fi
-
-          echo "Found hosted zone ID: $HOSTED_ZONE_ID"
-
-          # Create JSON for the change batch
-          CHANGE_BATCH='{
-            "Changes": [
-              {
-                "Action": "UPSERT",
-                "ResourceRecordSet": {
-                  "Name": "'$DOMAIN_NAME'",
-                  "Type": "A",
-                  "TTL": 300,
-                  "ResourceRecords": [
-                    {
-                      "Value": "'$EC2_IP'"
-                    }
-                  ]
-                }
-              },
-              {
-                "Action": "UPSERT",
-                "ResourceRecordSet": {
-                  "Name": "www.'$DOMAIN_NAME'",
-                  "Type": "A",
-                  "TTL": 300,
-                  "ResourceRecords": [
-                    {
-                      "Value": "'$EC2_IP'"
-                    }
-                  ]
-                }
-              },
-              {
-                "Action": "UPSERT",
-                "ResourceRecordSet": {
-                  "Name": "qa.'$DOMAIN_NAME'",
-                  "Type": "A",
-                  "TTL": 300,
-                  "ResourceRecords": [
-                    {
-                      "Value": "'$EC2_IP'"
-                    }
-                  ]
-                }
-              }
-            ]
-          }'
-
-          # Apply the changes
-          echo "Updating DNS records..."
-          CHANGE_ID=$(aws route53 change-resource-record-sets --hosted-zone-id "$HOSTED_ZONE_ID" --change-batch "$CHANGE_BATCH" --query "ChangeInfo.Id" --output text)
-
-          echo "DNS update submitted. Change ID: $CHANGE_ID"
-          echo "DNS changes may take up to 5-10 minutes to propagate."
-
-          echo "Verifying DNS records..."
-          aws route53 list-resource-record-sets --hosted-zone-id "$HOSTED_ZONE_ID" --query "ResourceRecordSets[?Name=='$DOMAIN_NAME.' || Name=='www.$DOMAIN_NAME.' || Name=='qa.$DOMAIN_NAME.']"
-          EOF
-          chmod +x scripts/update_route53.sh
-
-          # Create deployment script with fixed database configuration
-          cat > scripts/deploy.sh << EOF
-          $(cat artifacts/fixed-db-deploy.txt)
-          EOF
-          chmod +x scripts/deploy.sh
+          chmod +x deploy.sh
 
       - name: Setup SSH key
         run: |
           echo "${{ secrets.EC2_SSH_KEY }}" > labsuser.pem
           chmod 400 labsuser.pem
+          mkdir -p ~/.ssh
+          echo "Host *
+            StrictHostKeyChecking no
+            UserKnownHostsFile=/dev/null" > ~/.ssh/config
+          chmod 600 ~/.ssh/config
 
-      - name: Attempt SSH connection with retries
+      - name: Test SSH connection
         run: |
-          echo "Attempting SSH connection to QA instance..."
+          echo "Testing SSH connection..."
           EC2_IP="${{ secrets.EC2_QA_PUBLIC_IP }}"
+          ssh -i labsuser.pem ec2-user@$EC2_IP "echo SSH connection successful"
+          if [ $? -eq 0 ]; then
+            echo "✅ SSH connection successful"
+            echo "SSH_CONNECTION_SUCCESS=true" >> $GITHUB_ENV
+          else
+            echo "❌ SSH connection failed"
+            echo "SSH_CONNECTION_SUCCESS=false" >> $GITHUB_ENV
+          fi
 
-          # Increase the connection timeout and number of retries
-          for i in {1..5}; do
-            echo "Connection attempt $i of 5..."
-            if ssh -i labsuser.pem -o ConnectTimeout=30 -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ec2-user@$EC2_IP "echo Connection successful"; then
-              echo "✅ SSH connection established successfully!"
-              echo "SSH_CONNECTION_SUCCESS=true" >> $GITHUB_ENV
-              break
-            else
-              echo "⚠️ Connection attempt $i failed"
-              if [ $i -lt 5 ]; then
-                echo "Waiting 60 seconds before next attempt..."
-                sleep 60
-              else
-                echo "❌ All connection attempts failed"
-                echo "SSH_CONNECTION_SUCCESS=false" >> $GITHUB_ENV
-              fi
-            fi
-          done
-
-      - name: Deploy to EC2 instance
+      - name: Deploy to EC2
         if: ${{ env.SSH_CONNECTION_SUCCESS == 'true' }}
         run: |
           EC2_IP="${{ secrets.EC2_QA_PUBLIC_IP }}"
 
-          echo "Copying deployment scripts..."
-          scp -i labsuser.pem -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null scripts/setup_ec2.sh ec2-user@$EC2_IP:~/setup_ec2.sh
-          scp -i labsuser.pem -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null scripts/update_route53.sh ec2-user@$EC2_IP:~/update_route53.sh
-          scp -i labsuser.pem -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null scripts/deploy.sh ec2-user@$EC2_IP:~/deploy.sh
+          echo "Copying deployment script..."
+          scp -i labsuser.pem deploy.sh ec2-user@$EC2_IP:~/deploy.sh
 
-          echo "Setting up EC2 instance..."
-          ssh -i labsuser.pem -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ec2-user@$EC2_IP "AWS_REGION=${{ env.AWS_REGION }} AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} AWS_SESSION_TOKEN=${{ secrets.AWS_SESSION_TOKEN }} ECR_URI=${{ env.AWS_ECR_URI }} ./setup_ec2.sh"
+          echo "Running deployment script..."
+          ssh -i labsuser.pem ec2-user@$EC2_IP "chmod +x ~/deploy.sh && AWS_REGION=${{ env.AWS_REGION }} ECR_URI=${{ env.AWS_ECR_URI }} RDS_ENDPOINT=${{ secrets.RDS_ENDPOINT }} RDS_USERNAME=${{ secrets.RDS_USERNAME }} RDS_PASSWORD=${{ secrets.RDS_PASSWORD }} ~/deploy.sh"
 
-          echo "Updating Route53 records..."
-          ssh -i labsuser.pem -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ec2-user@$EC2_IP "AWS_REGION=${{ env.AWS_REGION }} AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} AWS_SESSION_TOKEN=${{ secrets.AWS_SESSION_TOKEN }} ./update_route53.sh mytwitch.software $EC2_IP"
-
-          echo "Deploying application with SSL..."
-          ssh -i labsuser.pem -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ec2-user@$EC2_IP "ECR_URI=${{ env.AWS_ECR_URI }} RDS_ENDPOINT=${{ secrets.RDS_ENDPOINT }} RDS_USERNAME=${{ secrets.RDS_USERNAME }} RDS_PASSWORD=${{ secrets.RDS_PASSWORD }} EC2_PUBLIC_IP=$EC2_IP ./deploy.sh mytwitch.software"
+          echo "Deployment completed"
 
       - name: Verify deployment
         if: ${{ env.SSH_CONNECTION_SUCCESS == 'true' }}
         run: |
           EC2_IP="${{ secrets.EC2_QA_PUBLIC_IP }}"
 
-          echo "Checking deployment status..."
-          ssh -i labsuser.pem -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ec2-user@$EC2_IP "sudo docker ps -a"
+          echo "Checking container status..."
+          ssh -i labsuser.pem ec2-user@$EC2_IP "sudo docker ps -a"
 
-          echo "Checking logs..."
-          ssh -i labsuser.pem -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ec2-user@$EC2_IP "sudo docker-compose -f docker-compose.http.yml logs --tail=30 || sudo docker-compose -f docker-compose.ssl.yml logs --tail=30 || echo 'No docker-compose logs available'"
+          echo "Getting application URL..."
+          EC2_PUBLIC_DNS=$(ssh -i labsuser.pem ec2-user@$EC2_IP "curl -s http://169.254.169.254/latest/meta-data/public-hostname")
 
           echo "Application should be available at:"
-          echo "- HTTP: http://qa.mytwitch.software"
-          echo "- HTTPS: https://qa.mytwitch.software (if SSL setup succeeded)"
+          echo "http://$EC2_PUBLIC_DNS"
+          echo "http://$EC2_IP"
 
-          echo "Note 1: DNS changes may take 5-10 minutes to propagate. If you cannot access the site immediately, please wait and try again."
-          echo "Note 2: If you're still having database connectivity issues, you'll need to check these security settings:"
-          echo "  1. Your EC2 instance security group must allow outbound traffic to port 3306"
-          echo "  2. Your RDS security group must allow inbound traffic from your EC2 instance's security group or IP address"
-          echo "  3. If your RDS is in a private subnet, ensure network routing allows access from the EC2 instance"
+          echo "Testing frontend and backend..."
+          ssh -i labsuser.pem ec2-user@$EC2_IP "curl -s -o /dev/null -w 'Frontend HTTP Status: %{http_code}\n' http://localhost:80 || echo 'Frontend not responding'"
+          ssh -i labsuser.pem ec2-user@$EC2_IP "curl -s -o /dev/null -w 'Backend HTTP Status: %{http_code}\n' http://localhost:8080/actuator/health || echo 'Backend health check failed'"
 
-      - name: Deployment failed due to connection issues
-        if: ${{ env.SSH_CONNECTION_SUCCESS == 'false' }}
-        run: |
-          echo "❌ Deployment failed due to SSH connection issues."
-          echo "Please check the following:"
-          echo "1. EC2 instance (${{ secrets.EC2_QA_PUBLIC_IP }}) is running"
-          echo "2. Security group allows SSH (port 22) from GitHub Actions IP"
-          echo "3. The SSH key is correct for the instance"
-          echo "4. Network connectivity between GitHub Actions and your EC2 instance"
-          exit 1
+          echo "To troubleshoot deployment issues:"
+          echo "1. SSH into the EC2 instance: ssh -i labsuser.pem ec2-user@$EC2_IP"
+          echo "2. Check deployment logs: cat ~/deployment-*.log"
+          echo "3. Check container logs: sudo docker-compose logs"
